force-app/main/default/objects/Student_Address__c/Student_Address__c.object-meta.xml
<CustomObject>
    <label>Student Address</label>
    <nameField>
        <label>Student Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>