force-app/main/default/objects/Student_Address__c/fields/APT_No__c.field-meta.xml
<CustomField>
    <fullName>APT_No__c</fullName>
    <label>APT No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>