force-app/main/default/objects/Student_Address__c/fields/Zip_COde__c.field-meta.xml
<CustomField>
    <fullName>Zip_COde__c</fullName>
    <label>Zip COde</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>